# EvoControl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: toolchain-mingw64.cmake
docs/: EVOCONTROL-ARCHITECTURE.md
scripts/: build-win64-deps.sh  package-linux.sh  package-macos.sh  package-win64.sh
src/: db.cpp  db.hpp  event_server.cpp  event_server.hpp  file_dialog.cpp  file_dialog.hpp  game_engine.cpp  game_engine.hpp  icon_cache.cpp  live_session.cpp  main.cpp  model.hpp  model_download.cpp  model_download.hpp  rest_api.cpp  rest_api.hpp  stats.cpp  stats.hpp  store.cpp  store.hpp  widget_registry.cpp  widget_registry.hpp  widget_runtime.cpp  widget_runtime.hpp
web/control/: host.js  index.html
web/obs/: host.js  index.html
web/shared/: ws.js
widgets-bundled/: score-battle.evw  text.evw  top-gifter.evw
widgets-src/: gift-goal.evw  logo.evw  ranking.evw  tap-race.evw
widgets-src/gift-goal/: app.js  control.js  manifest.json  obs.js
widgets-src/logo/: app.js  control.js  manifest.json  obs.js
widgets-src/ranking/: app.js  control.js  manifest.json  obs.js
widgets-src/score-battle/: app.js  control.js  manifest.json  obs.js
widgets-src/tap-race/: app.js  control.js  manifest.json  obs.js
widgets-src/text/: app.js  control.js  manifest.json  obs.js
widgets-src/top-gifter/: app.js  control.js  manifest.json  obs.js
